--- a/css/custom.css
+++ b/css/custom.css
@@ -1,6 +1,13 @@
 @import url('https://fonts.googleapis.com/css?family=Arvo');
 @import url('//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css');
 
+.container_blauw {
+    background-color: #6ab3b3;
+}
+
+.container_rood {
+    background-color: #fd4c4c;
+}
 
 h1, h2, h3 {
     font-family: "Blackout Midnight", sans-serif;  
@@ -8,6 +15,10 @@ h1, h2, h3 {
 
 h1 {
     font-size: 50px;
+}
+
+h2 {
+    margin-top: 2em;
 }
 
 h4, h5, p {
@@ -21,7 +32,8 @@ h4 {
 
 h5 {
     font-size: 15px;
-    text-align: left;
+    margin-left: 50%;
+    margin-top: -10px;
 }
 
 a {
@@ -29,34 +41,72 @@ a {
 }
 
 
+.btn {
+    font-family: "Arvo", serif;
+    font-weight: bold;
+}
+
 .btn-secondary {
     background-color: #F51515;
     color: white;
     border: 5px solid #2c9494;
 }
 
+.btn-block {
+    margin-top: 30px;
+    margin-bottom: 30px;
+    margin-left: 10%;
+}
+
 .btn-secondary:hover {
     background-color: #2c9494;
+    border: none;
+}
+
+ul {
+    list-style-image: url("afbeeldingen/peace.png"); 
 }
 
 li {
     font-family: "Arvo", serif; 
 }
 
+.card {
+    max-width: 600px;
+}
+
+.tracklist {
+    margin-top: 20px;
+}
+
+.img-fluid {
+    margin-top: 20px;
+}
 
 
-// Extra small devices (portrait phones, less than 576px)
-// No media query since this is the default in Bootstrap
+ Extra small devices (portrait phones, less than 576px)
+ No media query since this is the default in Bootstrap
 
 
-// Small devices (landscape phones, 576px and up)
+Small devices (landscape phones, 576px and up)
 @media (min-width: 576px) { ... }
 
-// Medium devices (tablets, 768px and up)
-@media (min-width: 768px) { ... }
+Medium devices (tablets, 768px and up)
+@media (min-width: 768px) { 
+    .btn-secondary {
+        font-size: 30px;
+    }
+ }
 
-// Large devices (desktops, 992px and up)
-@media (min-width: 992px) { ... }
+Large devices (desktops, 992px and up)
+@media (min-width: 992px) { 
+    
+    h1 {
+        font-size: 100px;
+    }
+    
+}
 
-// Extra large devices (large desktops, 1200px and up)
+
+Extra large devices (large desktops, 1200px and up)
 @media (min-width: 1200px) { ... }
